# raspberrypi

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .pdm.toml  Dockerfile  MANIFEST.in  README.md  manage.py  pyproject.toml  requirements.ini  setup.cfg  setup.py
.docker/etc/: supervisord.conf
.docker/etc/supervisor.d/: group-raspberry.ini  nameserver.ini  webserver.ini  zeroconf.ini
raspberrypi/raspberrypi/server/: cam.py
src/: base_gpio.py  get_temperature.py  manage.py  public_ip_monitor.py  run_moto.py  temperature.py  ultrasonic.py  water_flower.py
src/raspberrypi/: settings.py  urls.py  view.py  wsgi.py
src/raspberrypi/server/: cam.py  keep_online.py
src/raspberrypi/template/: cam.html
src/x007007007/RPi/: GPIO.py  _version.py
src/x007007007/RPi/dirver/: base_gpio.py  l289n.py
src/x007007007/djapp/local_net/: apps.py  urls.py  zc.py
src/x007007007/djapp/local_net/admin/: __init__.py  addr_ip.py  arp.py  device.py  device_type.py  service.py
src/x007007007/djapp/local_net/component/: zeroconf.py
src/x007007007/djapp/local_net/management/commands/: listen_zeroconf.py
src/x007007007/djapp/local_net/migrations/: 0001_initial.py  0002_addripmodel_addrmacmodel_remove_devicemodel_mac_and_more.py  0003_devicemodel_ip_set.py  0004_devicemodel_offline_servermodel_offline.py
src/x007007007/djapp/local_net/models/: __init__.py  addr_ip.py  addr_mac.py  arp.py  device.py  device_type.py  service.py
src/x007007007/djapp/localnet/nameserver/: apps.py  urls.py
src/x007007007/djapp/localnet/nameserver/admin/: __init__.py  domain.py  record.py
src/x007007007/djapp/localnet/nameserver/component/: server.py
src/x007007007/djapp/localnet/nameserver/management/commands/: start_nameserver.py
src/x007007007/djapp/localnet/nameserver/migrations/: 0001_initial.py  0002_recordmodel_name_alter_recordmodel_value.py  0003_recordmodel_ttl.py
src/x007007007/djapp/localnet/nameserver/models/: __init__.py  domain.py  record.py
src/x007007007/djapp/localnet/nameserver/restapi/: domain.py  record.py
src/x007007007/djapp/localnet/zeroconf/: apps.py  zc.py
src/x007007007/djapp/localnet/zeroconf/admin/: addr_mac.py
src/x007007007/djapp/localnet/zeroconf/component/: zeroconf.py
src/x007007007/djapp/localnet/zeroconf/management/commands/: start_zeroconf.py
src/x007007007/djapp/localnet/zeroconf/migrations/: 0001_initial.py
src/x007007007/djapp/localnet/zeroconf/models/: addr_ip.py  addr_mac.py  arp.py  device.py  device_type.py  service.py
src/x007007007/djapp/raspberry/net/: app.py  hook.py
src/x007007007/djapp/raspberry/net/models/: __init__.py
src/x007007007/djserver/raspberrypi/: __main__.py  asgi.py  manage.py  urls.py  wsgi.py
src/x007007007/djserver/raspberrypi/settings/: settings.py
