[project]
name = "x007007007-respberrypi"
version = "0.1.0"
description = ""
authors = [
    {name = "xingci.xu", email = "x007007007@hotmail.com"},
]
license-expression = "MIT"
dependencies = [
    "setuptools<=57.4"
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/x007007007/raspberrypi"


[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov[all]",
    "pytest-django",
    "pytest-asyncio"
]
lint = [
  "black",
  "flake8"
]
dj = [
    "django",
    "djangorestframework",
    "django-filter"
]
dj-ch = [
    "django",
    "djangorestframework",
    "django-filter",
    "channels",
]
dj-raspberrypi = [
    "django",
    "djangorestframework",
    "django-filter",
    "channels",
    "zeroconf>=0.39.1",
]

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "nuitka>=0.9.4",
    "isort",
    "cython",
]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"

[pypi]
url = "https://mirrors.aliyun.com/pypi/"