[project]
name = "x007007007-respberrypi"
version = "0.1.0"
description = ""
authors = [
    {name = "xingci.xu", email = "x007007007@hotmail.com"},
]
license-expression = "MIT"
dependencies = [
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/x007007007/raspberrypi"


[project.optional-dependencies]
supervisor = [
    "supervisor",
]
dj = [
    "django",
    "djangorestframework",
    "django-filter"
]
dj-celery = [
    "celery",
]
dj-ch = [
    "x007007007-respberrypi[dj]",
    "channels",
    "Twisted[tls,http2]",
    "daphne",
]
dj-raspberrypi = [
    "x007007007-respberrypi[dj-ch,supervisor]",
    "zeroconf>=0.39.1",
    "netifaces>=0.11.0",
]

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "setuptools<=57.4",
    "nuitka>=0.9.4",
    "isort",
    "cython",
    "wheel",
]
test = [
    "pytest",
    "pytest-cov[all]",
    "pytest-django",
    "pytest-asyncio"
]
lint = [
  "black",
  "flake8"
]

[tool.pdm.scripts]
lint = "flake8"
test = "pytest"
start = {composite = ["dev"]}
testall = {composite = ["lint", "test"]}
dev = {cmd = "supervisord -c .docker/etc/supervisord.conf"}
web = {cmd = "python manage.py runserver"}
dns = {cmd = "python manage.py start_nameserver"}
zeroconf = {cmd = "python manage.py start_zeroconf"}


[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"

[pypi]
url = "https://mirrors.aliyun.com/pypi/"